--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
             <div>
                 <div class="carousel w-[90%] lg:w-full ml-5">
                     <div id="slide1" class="carousel-item relative w-full">
-                        <img src="./images/1.png" class="w-full" />
+                        <img src="images/1.png" class="w-full" />
                         <div class="absolute flex gap-2 right-4 bottom-2 lg:left-8 lg:bottom-8">
                             <a href="#slide2" class="btn btn-circle bg-black text-white">❮</a>
                             <a href="#slide2" class="btn btn-circle bg-black text-white">❯</a>
                         </div>
                     </div>
                     <div id="slide2" class="carousel-item relative w-full">
-                        <img src="./images/4.png" class="w-full" />
+                        <img src="images/4.png" class="w-full" />
                         <div class="absolute flex gap-2 right-4 bottom-2 lg:left-8 lg:bottom-8">
                             <a href="#slide1" class="btn btn-circle bg-black text-white">❮</a>
                             <a href="#slide1" class="btn btn-circle bg-black text-white">❯</a>
@@ -60,7 +60,7 @@
     <!-- header section end -->
     <main class="container mx-auto">
         <!-- professional section start -->
-        <section class="min-h-screen mt-10 lg:mt-20">
+        <section class="mt-20 lg:mt-32">
             <div>
                 <div class="text-center">
                     <h3 class="main-color text-2xl lg:text-4xl font-extrabold">Professional Hockeys Club</h3>
@@ -100,7 +100,61 @@
                 </div>
             </div>
         </section>
-        <!-- professional section start -->
+        <!-- professional section end -->
+        <!-- program section start -->
+        <section class="min-h-screen mt-20 lg:mt-32">
+            <div>
+                <div class="text-center">
+                    <h3 class="main-color text-2xl lg:text-4xl font-extrabold">Professional Hockeys Club</h3>
+                    <p class="semi-color font-semibold mt-6 w-[80%] lg:w-2/4 mx-auto">Dit amet consectetur. Condimentum
+                        dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+                </div>
+                <div class="flex items-center justify-center">
+                    <div class="mt-20 mx-5 grid gap-6 grid-cols-1 lg:grid-cols-2">
+                        <div class="">
+                            <div
+                                class=" lg:w-[573px] lg:h-[338px] bg-[url('/images/2.png')] bg-no-repeat bg-cover bg-center rounded-2xl">
+                                <div class="px-6 py-6 lg:pt-28 lg:pl-10">
+                                    <h4 class=" text-xl lg:text-2xl font-extrabold text-white">Junior Program</h4>
+                                    <p class="font-medium text-white lg:w-2/3 mb-6">Dolor sit amet consectetur. Ut urna
+                                        diam quis sagittis. Elit elit
+                                        enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla.
+                                        Tortor congue sed et in.</p>
+                                    <button class="btn bg-red-500 text-white border-none">Register Now!</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="">
+                            <div
+                                class=" lg:w-[573px] lg:h-[338px] bg-[url('/images/3.png')] bg-no-repeat bg-cover bg-center rounded-2xl">
+                                <div class="px-6 py-6 lg:pt-28 lg:pl-10">
+                                    <h4 class=" text-xl lg:text-2xl font-extrabold text-white">Teenager Program</h4>
+                                    <p class="font-medium text-white lg:w-2/3 mb-6">Dolor sit amet consectetur. Ut urna
+                                        diam quis sagittis. Elit elit
+                                        enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla.
+                                        Tortor congue sed et in.</p>
+                                    <button class="btn bg-red-500 text-white border-none">Register Now!</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class=" lg:col-span-2">
+                            <div
+                                class=" lg:w-[1170px] lg:h-[450px] bg-[url('/images/4.png')] bg-no-repeat bg-cover bg-center rounded-2xl">
+                                <div class="px-6 py-6 lg:pt-64 lg:pl-10">
+                                    <h4 class=" text-xl lg:text-2xl font-extrabold text-white">Professional Program</h4>
+                                    <p class="font-medium text-white lg:w-1/2 mb-6">Dolor sit amet consectetur. Ut urna
+                                        diam quis sagittis. Elit elit
+                                        enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla.
+                                        Tortor congue sed et in.</p>
+                                    <button class="btn bg-red-500 text-white border-none">Register Now!</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- program section end -->
     </main>
     <footer>
 
