--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
             <div>
                 <div class="carousel w-[90%] lg:w-full ml-5">
                     <div id="slide1" class="carousel-item relative w-full">
-                        <img src="images/1.png" class="w-full" />
+                        <img src="./img/1.png" class="w-full" />
                         <div class="absolute flex gap-2 right-4 bottom-2 lg:left-8 lg:bottom-8">
                             <a href="#slide2" class="btn btn-circle bg-black text-white">❮</a>
                             <a href="#slide2" class="btn btn-circle bg-black text-white">❯</a>
                         </div>
                     </div>
                     <div id="slide2" class="carousel-item relative w-full">
-                        <img src="images/4.png" class="w-full" />
+                        <img src="./img/4.png" class="w-full" />
                         <div class="absolute flex gap-2 right-4 bottom-2 lg:left-8 lg:bottom-8">
                             <a href="#slide1" class="btn btn-circle bg-black text-white">❮</a>
                             <a href="#slide1" class="btn btn-circle bg-black text-white">❯</a>
@@ -113,7 +113,7 @@
                     <div class="mt-20 mx-5 grid gap-6 grid-cols-1 lg:grid-cols-2">
                         <div class="">
                             <div
-                                class=" lg:w-[573px] lg:h-[338px] bg-[url('/images/2.png')] bg-no-repeat bg-cover bg-center rounded-2xl">
+                                class=" lg:w-[573px] lg:h-[338px] bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url('./img/2.png')] bg-no-repeat bg-cover bg-center rounded-2xl">
                                 <div class="px-6 py-6 lg:pt-28 lg:pl-10">
                                     <h4 class=" text-xl lg:text-2xl font-extrabold text-white">Junior Program</h4>
                                     <p class="font-medium text-white lg:w-2/3 mb-6">Dolor sit amet consectetur. Ut urna
@@ -126,7 +126,7 @@
                         </div>
                         <div class="">
                             <div
-                                class=" lg:w-[573px] lg:h-[338px] bg-[url('/images/3.png')] bg-no-repeat bg-cover bg-center rounded-2xl">
+                                class=" lg:w-[573px] lg:h-[338px] bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url('./img/3.png')]  bg-no-repeat bg-cover bg-center rounded-2xl">
                                 <div class="px-6 py-6 lg:pt-28 lg:pl-10">
                                     <h4 class=" text-xl lg:text-2xl font-extrabold text-white">Teenager Program</h4>
                                     <p class="font-medium text-white lg:w-2/3 mb-6">Dolor sit amet consectetur. Ut urna
@@ -139,7 +139,7 @@
                         </div>
                         <div class=" lg:col-span-2">
                             <div
-                                class=" lg:w-[1170px] lg:h-[450px] bg-[url('/images/4.png')] bg-no-repeat bg-cover bg-center rounded-2xl">
+                                class=" lg:w-[1170px] lg:h-[450px] bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url('./img/4.png')]  bg-no-repeat bg-cover bg-center rounded-2xl">
                                 <div class="px-6 py-6 lg:pt-64 lg:pl-10">
                                     <h4 class=" text-xl lg:text-2xl font-extrabold text-white">Professional Program</h4>
                                     <p class="font-medium text-white lg:w-1/2 mb-6">Dolor sit amet consectetur. Ut urna
