product section added

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
         .semi-color {
             color: rgba(19, 19, 24, 0.60);
         }
+
+        .main-border {
+            border: 1px solid rgba(19, 19, 24, 0.60);
+            border-radius: 16px;
+        }
     </style>
 </head>
 
@@ -155,6 +160,211 @@
             </div>
         </section>
         <!-- program section end -->
+        <!-- product section start -->
+        <section class="min-h-screen mt-20 lg:mt-32">
+            <div class="text-center">
+                <h3 class="main-color text-2xl lg:text-4xl font-extrabold">Our New Products</h3>
+                <p class="semi-color font-semibold mt-6 w-[80%] lg:w-2/4 mx-auto">Dit amet consectetur. Condimentum
+                    dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+            </div>
+            <div class="flex justify-center items-center">
+                <div class="mt-20 grid gap-6 grid-cols-1 lg:grid-cols-2 space-y-6">
+                    <div
+                        class=" main-border lg:ml-0 lg:mr-0 ml-10 mr-10 flex flex-col lg:flex-row p-4 lg:p-4 items-center justify-center gap-5">
+                        <div>
+                            <img class="w-[287px] lg:w-full" src="./img/5.png" alt="">
+                        </div>
+                        <div class="space-y-3">
+                            <div class="flex gap-4 semi-color">
+                                <div>
+                                    <i class="fa-solid fa-star text-amber-400"></i> 5.0
+                                </div>
+                                <div>
+                                    <i class="fa-regular fa-eye"></i> 20
+                                </div>
+                                <div>
+                                    <i class="fa-regular fa-heart"></i> 200
+                                </div>
+                            </div>
+                            <div class="space-y-3">
+                                <h4 class="main-color text-xl font-extrabold">World Cup Flags Football</h4>
+                                <p class="semi-color font-medium w-2/3">Dolor sit amet consectetur. Ut urna diam quis
+                                    sagittis. </p>
+                                <div class="flex flex-col lg:flex-row gap-2 lg:gap-5">
+                                    <h4 class="text-red-500 text-lg font-extrabold">Price - $22.00</h4>
+                                    <div class="semi-color flex gap-2">
+                                        <div><i class="fa-solid fa-cart-shopping"></i></div>
+                                        <div>Delivery Fee : Free</div>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div
+                        class=" main-border lg:ml-0 lg:mr-0 ml-10 mr-10 flex flex-col lg:flex-row p-4 lg:p-4 items-center justify-center gap-5">
+                        <div>
+                            <img class="w-[287px] lg:w-full" src="./img/6.png" alt="">
+                        </div>
+                        <div class="space-y-3">
+                            <div class="flex gap-4 semi-color">
+                                <div>
+                                    <i class="fa-solid fa-star text-amber-400"></i> 5.0
+                                </div>
+                                <div>
+                                    <i class="fa-regular fa-eye"></i> 20
+                                </div>
+                                <div>
+                                    <i class="fa-regular fa-heart"></i> 200
+                                </div>
+                            </div>
+                            <div class="space-y-3">
+                                <h4 class="main-color text-xl font-extrabold">World Cup Flags Football</h4>
+                                <p class="semi-color font-medium w-2/3">Dolor sit amet consectetur. Ut urna diam quis
+                                    sagittis. </p>
+                                <div class="flex flex-col lg:flex-row gap-2 lg:gap-5">
+                                    <h4 class="text-red-500 text-lg font-extrabold">Price - $22.00</h4>
+                                    <div class="semi-color flex gap-2">
+                                        <div><i class="fa-solid fa-cart-shopping"></i></div>
+                                        <div>Delivery Fee : Free</div>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div
+                        class=" main-border lg:ml-0 lg:mr-0 ml-10 mr-10 flex flex-col lg:flex-row p-4 lg:p-4 items-center justify-center gap-5">
+                        <div>
+                            <img class="w-[287px] lg:w-full" src="./img/7.png" alt="">
+                        </div>
+                        <div class="space-y-3">
+                            <div class="flex gap-4 semi-color">
+                                <div>
+                                    <i class="fa-solid fa-star text-amber-400"></i> 5.0
+                                </div>
+                                <div>
+                                    <i class="fa-regular fa-eye"></i> 20
+                                </div>
+                                <div>
+                                    <i class="fa-regular fa-heart"></i> 200
+                                </div>
+                            </div>
+                            <div class="space-y-3">
+                                <h4 class="main-color text-xl font-extrabold">World Cup Flags Football</h4>
+                                <p class="semi-color font-medium w-2/3">Dolor sit amet consectetur. Ut urna diam quis
+                                    sagittis. </p>
+                                <div class="flex flex-col lg:flex-row gap-2 lg:gap-5">
+                                    <h4 class="text-red-500 text-lg font-extrabold">Price - $22.00</h4>
+                                    <div class="semi-color flex gap-2">
+                                        <div><i class="fa-solid fa-cart-shopping"></i></div>
+                                        <div>Delivery Fee : Free</div>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div
+                        class=" main-border lg:ml-0 lg:mr-0 ml-10 mr-10 flex flex-col lg:flex-row p-4 lg:p-4 items-center justify-center gap-5">
+                        <div>
+                            <img class="w-[287px] lg:w-full" src="./img/8.png" alt="">
+                        </div>
+                        <div class="space-y-3">
+                            <div class="flex gap-4 semi-color">
+                                <div>
+                                    <i class="fa-solid fa-star text-amber-400"></i> 5.0
+                                </div>
+                                <div>
+                                    <i class="fa-regular fa-eye"></i> 20
+                                </div>
+                                <div>
+                                    <i class="fa-regular fa-heart"></i> 200
+                                </div>
+                            </div>
+                            <div class="space-y-3">
+                                <h4 class="main-color text-xl font-extrabold">World Cup Flags Football</h4>
+                                <p class="semi-color font-medium w-2/3">Dolor sit amet consectetur. Ut urna diam quis
+                                    sagittis. </p>
+                                <div class="flex flex-col lg:flex-row gap-2 lg:gap-5">
+                                    <h4 class="text-red-500 text-lg font-extrabold">Price - $22.00</h4>
+                                    <div class="semi-color flex gap-2">
+                                        <div><i class="fa-solid fa-cart-shopping"></i></div>
+                                        <div>Delivery Fee : Free</div>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div
+                        class=" main-border lg:ml-0 lg:mr-0 ml-10 mr-10 flex flex-col lg:flex-row p-4 lg:p-4 items-center justify-center gap-5">
+                        <div>
+                            <img class="w-[287px] lg:w-full" src="./img/9.png" alt="">
+                        </div>
+                        <div class="space-y-3">
+                            <div class="flex gap-4 semi-color">
+                                <div>
+                                    <i class="fa-solid fa-star text-amber-400"></i> 5.0
+                                </div>
+                                <div>
+                                    <i class="fa-regular fa-eye"></i> 20
+                                </div>
+                                <div>
+                                    <i class="fa-regular fa-heart"></i> 200
+                                </div>
+                            </div>
+                            <div class="space-y-3">
+                                <h4 class="main-color text-xl font-extrabold">World Cup Flags Football</h4>
+                                <p class="semi-color font-medium w-2/3">Dolor sit amet consectetur. Ut urna diam quis
+                                    sagittis. </p>
+                                <div class="flex flex-col lg:flex-row gap-2 lg:gap-5">
+                                    <h4 class="text-red-500 text-lg font-extrabold">Price - $22.00</h4>
+                                    <div class="semi-color flex gap-2">
+                                        <div><i class="fa-solid fa-cart-shopping"></i></div>
+                                        <div>Delivery Fee : Free</div>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div
+                        class=" main-border lg:ml-0 lg:mr-0 ml-10 mr-10 flex flex-col lg:flex-row p-4 lg:p-4 items-center justify-center gap-5">
+                        <div>
+                            <img class="w-[287px] lg:w-full" src="./img/10.png" alt="">
+                        </div>
+                        <div class="space-y-3">
+                            <div class="flex gap-4 semi-color">
+                                <div>
+                                    <i class="fa-solid fa-star text-amber-400"></i> 5.0
+                                </div>
+                                <div>
+                                    <i class="fa-regular fa-eye"></i> 20
+                                </div>
+                                <div>
+                                    <i class="fa-regular fa-heart"></i> 200
+                                </div>
+                            </div>
+                            <div class="space-y-3">
+                                <h4 class="main-color text-xl font-extrabold">World Cup Flags Football</h4>
+                                <p class="semi-color font-medium w-2/3">Dolor sit amet consectetur. Ut urna diam quis
+                                    sagittis. </p>
+                                <div class="flex flex-col lg:flex-row gap-2 lg:gap-5">
+                                    <h4 class="text-red-500 text-lg font-extrabold">Price - $22.00</h4>
+                                    <div class="semi-color flex gap-2">
+                                        <div><i class="fa-solid fa-cart-shopping"></i></div>
+                                        <div>Delivery Fee : Free</div>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
     </main>
     <footer>
 
