faq section added

--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
         }
 
         .main-border {
-            border: 1px solid rgba(19, 19, 24, 0.60);
+            border: 1px solid rgba(19, 19, 24, 0.10);
             border-radius: 16px;
+        }
+
+        .horizontal-border {
+            border-bottom: 1px dashed rgba(19, 19, 24, 0.20);
         }
     </style>
 </head>
@@ -62,10 +66,11 @@
             </div>
         </div>
     </header>
+    <div class="horizontal-border mx-5 mt-10 mb-10 lg:mt-20 lg:mb-20"></div>
     <!-- header section end -->
     <main class="container mx-auto">
         <!-- professional section start -->
-        <section class="mt-20 lg:mt-32">
+        <section class="">
             <div>
                 <div class="text-center">
                     <h3 class="main-color text-2xl lg:text-4xl font-extrabold">Professional Hockeys Club</h3>
@@ -105,9 +110,10 @@
                 </div>
             </div>
         </section>
+        <div class="horizontal-border mx-5  mt-10 mb-10 lg:mt-20 lg:mb-20"></div>
         <!-- professional section end -->
         <!-- program section start -->
-        <section class="min-h-screen mt-20 lg:mt-32">
+        <section class="min-h-screen ">
             <div>
                 <div class="text-center">
                     <h3 class="main-color text-2xl lg:text-4xl font-extrabold">Professional Hockeys Club</h3>
@@ -159,9 +165,10 @@
                 </div>
             </div>
         </section>
+        <div class="horizontal-border mx-5 mt-10 mb-10 lg:mt-20 lg:mb-20"></div>
         <!-- program section end -->
         <!-- product section start -->
-        <section class="min-h-screen mt-20 lg:mt-32">
+        <section class="min-h-screen ">
             <div class="text-center">
                 <h3 class="main-color text-2xl lg:text-4xl font-extrabold">Our New Products</h3>
                 <p class="semi-color font-semibold mt-6 w-[80%] lg:w-2/4 mx-auto">Dit amet consectetur. Condimentum
@@ -365,6 +372,84 @@
 
             </div>
         </section>
+        <div class="horizontal-border mx-5 mt-10 mb-10 lg:mt-20 lg:mb-20"></div>
+        <!-- product section end -->
+        <!-- faq section start -->
+        <section class="min-h-screen ">
+            <div class="text-center">
+                <h3 class="main-color text-2xl lg:text-4xl font-extrabold">Clients Question</h3>
+                <p class="semi-color font-semibold mt-6 w-[80%] lg:w-2/4 mx-auto">Dit amet consectetur. Condimentum
+                    dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin.</p>
+            </div>
+            <div
+                class="mt-20 lg:ml-0 lg:mr-0 ml-5 mr-5 p-5 lg:p-10 justify-center items-center main-border  flex flex-col lg:flex-row gap-10">
+                <div class="flex-1">
+                    <img src="./img/11.png" alt="">
+                </div>
+                <div class="space-y-2 lg:w-2/3">
+                    <div class="collapse collapse-plus bg-base-200">
+                        <input type="radio" name="my-accordion-3" checked="checked" />
+                        <div class="collapse-title main-color text-xl font-semibold">
+                            Our Equipment
+                        </div>
+                        <div class="collapse-content">
+                            <p class="semi-color w-3/4">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                                elit enim sagittis turpis in magna.</p>
+                        </div>
+                    </div>
+                    <div class="collapse collapse-plus bg-base-200">
+                        <input type="radio" name="my-accordion-3" checked="checked" />
+                        <div class="collapse-title main-color text-xl font-semibold">
+                            Hockey Training
+                        </div>
+                        <div class="collapse-content">
+                            <p class="semi-color w-3/4">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                                elit enim sagittis turpis in magna.</p>
+                        </div>
+                    </div>
+                    <div class="collapse collapse-plus bg-base-200">
+                        <input type="radio" name="my-accordion-3" checked="checked" />
+                        <div class="collapse-title main-color text-xl font-semibold">
+                            Private Lessons
+                        </div>
+                        <div class="collapse-content">
+                            <p class="semi-color w-3/4">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                                elit enim sagittis turpis in magna.</p>
+                        </div>
+                    </div>
+                    <div class="collapse collapse-plus bg-base-200">
+                        <input type="radio" name="my-accordion-3" checked="checked" />
+                        <div class="collapse-title main-color text-xl font-semibold">
+                            Ski Touring
+                        </div>
+                        <div class="collapse-content">
+                            <p class="semi-color w-3/4">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                                elit enim sagittis turpis in magna.</p>
+                        </div>
+                    </div>
+                    <div class="collapse collapse-plus bg-base-200">
+                        <input type="radio" name="my-accordion-3" />
+                        <div class="collapse-title text-xl font-medium">
+                            Pricings
+                        </div>
+                        <div class="collapse-content">
+                            <p>hello</p>
+                        </div>
+                    </div>
+                    <div class="collapse collapse-plus bg-base-200">
+                        <input type="radio" name="my-accordion-3" />
+                        <div class="collapse-title text-xl font-medium">
+                            Booking
+                        </div>
+                        <div class="collapse-content">
+                            <p>hello</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <div class="horizontal-border mx-5 mt-10 mb-10 lg:mt-20 lg:mb-20"></div>
+        <!-- faq section end -->
     </main>
     <footer>
 
