newletter section added

--- a/index.html
+++ b/index.html
@@ -450,6 +450,79 @@
         </section>
         <div class="horizontal-border mx-5 mt-10 mb-10 lg:mt-20 lg:mb-20"></div>
         <!-- faq section end -->
+        <!-- newsletter section start -->
+        <section class="min-h-screen container mx-auto">
+            <div class="text-center">
+                <h3 class="main-color text-2xl lg:text-4xl font-extrabold">Get In Touch</h3>
+                <p class="semi-color font-semibold mt-6 w-[80%] lg:w-2/4 mx-auto">Dit amet consectetur. Condimentum
+                    dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+            </div>
+            <div class="lg:mt-20 mt-10 lg:mx-auto flex flex-col lg:flex-row justify-center items-center gap-6">
+                <div class="space-y-6 main-border p-6">
+                    <div
+                        class="rounded-2xl pt-10 pl-4 lg:pt-16 lg:pl-8 w-[287px] lg:w-374px h-[184px] lg:h-[216px] bg-[#bbed6d1a]">
+                        <img class="mb-6" src="./img/Group 1171275317.png" alt="">
+                        <p class="semi-color font-light">Phone Number : </p>
+                        <h4 class="main-color font-bold">(+62) 123-321-543</h4>
+                    </div>
+                    <div
+                        class="rounded-2xl pt-10 pl-4 lg:pt-16 lg:pl-8 w-[287px] lg:w-374px h-[184px] lg:h-[216px] bg-[#fddd5f1a]">
+                        <img class="mb-6" src="./img/Group 1171275317.png" alt="">
+                        <p class="semi-color font-light">Phone Number : </p>
+                        <h4 class="main-color font-bold">(+62) 123-321-543</h4>
+                    </div>
+                    <div
+                        class="rounded-2xl pt-10 pl-4 lg:pt-16 lg:pl-8 w-[287px] lg:w-374px h-[184px] lg:h-[216px] bg-[#629cf31a]">
+                        <img class="mb-6" src="./img/Group 1171275317.png" alt="">
+                        <p class="semi-color font-light">Phone Number : </p>
+                        <h4 class="main-color font-bold">(+62) 123-321-543</h4>
+                    </div>
+                </div>
+                <div>
+                    <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
+                        <div>
+                            <label class="text-lg font-bold" for="">Your Name</label><br>
+                            <input class="w-[324px] mt-4 p-5 bg-[#13131808] outline-none border-none rounded-2xl"
+                                type="text" placeholder="Enter your Name">
+                        </div>
+                        <div>
+                            <label class="text-lg font-bold" for="">Your Email</label> <br>
+                            <input class="w-[324px] mt-4 p-5 bg-[#13131808] outline-none border-none rounded-2xl"
+                                type="email" placeholder="Enter your Email">
+                        </div>
+                        <div>
+                            <label class="text-lg font-bold" for="">Subject</label> <br>
+                            <input class="w-[324px] mt-4 p-5 bg-[#13131808] outline-none border-none rounded-2xl"
+                                type="text" placeholder="Enter your Subject">
+                        </div>
+                        <div>
+                            <label class="text-lg font-bold" for="">Phone Number</label> <br>
+                            <input class="w-[324px] mt-4 p-5 bg-[#13131808] outline-none border-none rounded-2xl"
+                                type="number" placeholder="Enter your Phone Number">
+                        </div>
+                        <div class="lg:col-span-2">
+                            <label class="text-lg font-bold" for="">Message</label> <br>
+                            <textarea class="w-full mt-4 p-5 rounded-2xl outline-none bg-[#13131808]" name="" id=""
+                                cols="30" rows="10" placeholder="Write your message"></textarea>
+                        </div>
+                        <div class="lg:col-span-2">
+                            <button class="w-full btn text-lg text-white bg-red-500">Send Message</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class=" container mx-auto w-[335px] lg:w-full bg-[#13131808] rounded-xl mt-12 text-center py-9">
+                <h4 class="main-color text-2xl font-extrabold">Social Media</h4>
+                <div class="flex gap-6 items-center justify-center mt-5 text-3xl">
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-github"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-facebook"></i>
+                </div>
+            </div>
+        </section>
+        <div class="horizontal-border mx-5 mt-10 mb-10 lg:mt-20 lg:mb-20"></div>
+        <!-- newsletter section start -->
     </main>
     <footer>
 
