footer section added

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     </style>
 </head>
 
-<body class="main-font container mx-auto min-h-screen">
+<body class="main-font">
     <!-- header section start -->
-    <header class="mt-10">
+    <header class="mt-10 container mx-auto">
         <div>
             <div>
                 <div class="carousel w-[90%] lg:w-full ml-5">
@@ -68,9 +68,9 @@
     </header>
     <div class="horizontal-border mx-5 mt-10 mb-10 lg:mt-20 lg:mb-20"></div>
     <!-- header section end -->
-    <main class="container mx-auto">
+    <main class="">
         <!-- professional section start -->
-        <section class="">
+        <section class="container mx-auto">
             <div>
                 <div class="text-center">
                     <h3 class="main-color text-2xl lg:text-4xl font-extrabold">Professional Hockeys Club</h3>
@@ -110,10 +110,10 @@
                 </div>
             </div>
         </section>
-        <div class="horizontal-border mx-5  mt-10 mb-10 lg:mt-20 lg:mb-20"></div>
+        <div class="container lg:mx-auto horizontal-border mx-5  mt-10 mb-10 lg:mt-20 lg:mb-20"></div>
         <!-- professional section end -->
         <!-- program section start -->
-        <section class="min-h-screen ">
+        <section class="min-h-screen container mx-auto">
             <div>
                 <div class="text-center">
                     <h3 class="main-color text-2xl lg:text-4xl font-extrabold">Professional Hockeys Club</h3>
@@ -165,10 +165,10 @@
                 </div>
             </div>
         </section>
-        <div class="horizontal-border mx-5 mt-10 mb-10 lg:mt-20 lg:mb-20"></div>
+        <div class="horizontal-border container lg:mx-auto mx-5 mt-10 mb-10 lg:mt-20 lg:mb-20"></div>
         <!-- program section end -->
         <!-- product section start -->
-        <section class="min-h-screen ">
+        <section class="min-h-screen container mx-auto">
             <div class="text-center">
                 <h3 class="main-color text-2xl lg:text-4xl font-extrabold">Our New Products</h3>
                 <p class="semi-color font-semibold mt-6 w-[80%] lg:w-2/4 mx-auto">Dit amet consectetur. Condimentum
@@ -372,10 +372,10 @@
 
             </div>
         </section>
-        <div class="horizontal-border mx-5 mt-10 mb-10 lg:mt-20 lg:mb-20"></div>
+        <div class="horizontal-border container lg:mx-auto mx-5 mt-10 mb-10 lg:mt-20 lg:mb-20"></div>
         <!-- product section end -->
         <!-- faq section start -->
-        <section class="min-h-screen ">
+        <section class="min-h-screen container mx-auto">
             <div class="text-center">
                 <h3 class="main-color text-2xl lg:text-4xl font-extrabold">Clients Question</h3>
                 <p class="semi-color font-semibold mt-6 w-[80%] lg:w-2/4 mx-auto">Dit amet consectetur. Condimentum
@@ -448,7 +448,7 @@
                 </div>
             </div>
         </section>
-        <div class="horizontal-border mx-5 mt-10 mb-10 lg:mt-20 lg:mb-20"></div>
+        <div class="horizontal-border container lg:mx-auto mx-5 mt-10 mb-10 lg:mt-20 lg:mb-20"></div>
         <!-- faq section end -->
         <!-- newsletter section start -->
         <section class="min-h-screen container mx-auto">
@@ -521,12 +521,64 @@
                 </div>
             </div>
         </section>
-        <div class="horizontal-border mx-5 mt-10 mb-10 lg:mt-20 lg:mb-20"></div>
+        <div class="horizontal-border container lg:mx-auto mx-5 mt-10 mb-10 lg:mt-20 lg:mb-20"></div>
         <!-- newsletter section start -->
     </main>
+    <!-- footer section start -->
     <footer>
+        <div>
+            <div class="footer p-10 bg-[#131318] text-white">
+                <form class="mx-auto">
+                    <div class="space-y-4 lg:ml-40 ">
+                        <h3 class="text-2xl text-white font-extrabold">Get In Touch</h3>
+                        <p class="w-[297px] lg:w-[346px]">Dit amet consectetur. Condimentum adipiscing aliquam turpis
+                            placerat
+                            dolor. Purus urna in sit nullam proin. </p>
+                        <div class="space-y-2">
+                            <div class="flex gap-2 items-center">
+                                <i class="fa-regular fa-envelope text-red-700"></i>
+                                <p>hockeys@support.com</p>
+                            </div>
+                            <div class="flex gap-2 items-center">
+                                <i class="fa-solid fa-phone text-red-700"></i>
+                                <p>(+62) 123-321-543</p>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+                <div class="mx-auto">
+                    <div class="grid lg:grid-cols-3 grid-cols-2 gap-10 lg:gap-40">
+                        <nav class="flex flex-col gap-2 ">
+                            <header class="footer-title">Company</header>
+                            <a class="link link-hover">About us</a>
+                            <a class="link link-hover">Leadership</a>
+                            <a class="link link-hover">Jobs</a>
+                            <a class="link link-hover">News</a>
+                            <a class="link link-hover">Article</a>
+                        </nav>
+                        <nav class="flex flex-col gap-2 ">
+                            <header class="footer-title">Support</header>
+                            <a class="link link-hover">Help center</a>
+                            <a class="link link-hover">FAQ</a>
+                            <a class="link link-hover">Ticket Center</a>
+                            <a class="link link-hover">Contuct Us</a>
+                        </nav>
+                        <nav class="flex flex-col gap-2 ">
+                            <header class="footer-title">Services</header>
+                            <a class="link link-hover">Academy</a>
+                            <a class="link link-hover">Group lesson</a>
+                            <a class="link link-hover">Private lesson</a>
+                            <a class="link link-hover">Hockeys for kid</a>
+                            <a class="link link-hover">Hockeys for adult</a>
+                        </nav>
+                    </div>
+                </div>
 
+            </div>
+
+
+        </div>
     </footer>
-</body>
+    <!-- footer section end -->
 
 </html>
