--- a/index.html
+++ b/index.html
@@ -38,10 +38,50 @@
 
 <body class="main-font">
     <!-- header section start -->
-    <header class="mt-10 container mx-auto">
+    <header class="container mx-auto">
+        <!-- navbar section start -->
+        <div class="mt-10 container mx-auto">
+            <div class="navbar bg-base-100">
+                <div class="navbar-start">
+                    <div class="dropdown">
+                        <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                                stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M4 6h16M4 12h8m-8 6h16" />
+                            </svg>
+                        </div>
+                        <ul tabindex="0"
+                            class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-40">
+                            <li><a>Home</a></li>
+                            <li><a>About</a></li>
+                            <li><a>Pages</a></li>
+                            <li><a>Blog</a></li>
+                            <li><a>Contact</a></li>
+                        </ul>
+                    </div>
+                    <a class="btn btn-ghost text-3xl font-extrabold">Hockey<span class="text-red-500">’</span>s</a>
+                </div>
+                <div class="navbar-center hidden lg:flex">
+                    <ul class="menu menu-horizontal px-1">
+                        <li><a class="text-red-500">Home</a></li>
+                        <li><a>About</a></li>
+                        <li><a>Pages</a></li>
+                        <li><a>Blog</a></li>
+                        <li><a>Contact</a></li>
+                    </ul>
+                </div>
+                <div class="navbar-end">
+                    <div class="lg:block hidden"><i class="fa-solid fa-magnifying-glass"></i></div>
+                    <a class="btn px-6 bg-red-500 text-white lg:ml-6">Get Ticket</a>
+                </div>
+            </div>
+        </div>
+        <!-- navbar section end -->
+        <!-- banner section start -->
         <div>
             <div>
-                <div class="carousel w-[90%] lg:w-full ml-5">
+                <div class="carousel mt-10 w-[90%] lg:w-full ml-5">
                     <div id="slide1" class="carousel-item relative w-full">
                         <img src="./img/1.png" class="w-full" />
                         <div class="absolute flex gap-2 right-4 bottom-2 lg:left-8 lg:bottom-8">
@@ -59,12 +99,13 @@
                 </div>
             </div>
             <div
-                class="w-[85%] ml-8 lg:absolute bottom-10 right-20 p-4 lg:p-8 bg-[#131318] lg:w-1/3 space-y-4 rounded-xl">
+                class="w-[85%] ml-8 lg:absolute bottom-10 lg:-bottom-10 right-20 p-4 lg:p-8 bg-[#131318] lg:w-1/3 space-y-4 rounded-xl">
                 <h4 class="text-xl lg:text-2xl font-extrabold text-white">Meet all the heroes from the field</h4>
                 <p class="text-sm font-medium text-white">Dit amet consectetur. Condimentum dignissim adipiscing aliquam
                     turpis placerat dolor. Purus urna in sit nullam proin. </p>
             </div>
         </div>
+        <!-- banner section end -->
     </header>
     <div class="horizontal-border mx-5 mt-10 mb-10 lg:mt-20 lg:mb-20"></div>
     <!-- header section end -->
